--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         Conteudo exclisivo para desenvolvimento de Software e tudo que
         precisamos dominar na linguagem de programação
       </h1>
-      <img src="" alt="">
+      <img src="/imagens/img.03.jpg" alt="desenho">
       <a href="">Assine por 12x de 120.00</a>
       <a href="">Assine por deconto como estudante</a>
     </section>
